# august

./: Cargo.toml  output.rs
august_plugin_system/: Cargo.toml
august_plugin_system/src/: config.rs  error.rs  lib.rs  plugin.rs  plugin_loader.rs
august_plugin_system/src/plugin_manager/: mod.rs  plugin_manager.rs
august_plugin_system/src/plugin_manager/native_plugin_manager/: mod.rs
august_plugin_system/tests/: dependency.rs  function.rs  main.rs  test_manager.rs
august_plugin_system/tests/utils/: mod.rs  native_config.rs  test_manager.rs
august_plugin_system/tests/utils/managers/: mod.rs  void_manager.rs
core/august_plugin_system/: Cargo.toml
core/august_plugin_system/codegen/: Cargo.toml  output.rs
core/august_plugin_system/codegen/src/: lib.rs
core/august_plugin_system/codegen/src/function/: generate_function.rs  generate_struct.rs  generator.rs  mod.rs  utils.rs  validator.rs
core/august_plugin_system/codegen/tests/: main.rs
core/august_plugin_system/src/: builder.rs  error.rs  info.rs  lib.rs  loader.rs  manager.rs  plugin.rs  wrapper_loader.rs
core/august_plugin_system/src/context/: load_plugin_context.rs  loader_context.rs  mod.rs  register_plugin_context.rs
core/august_plugin_system/src/function/: arg.rs  function.rs  macros.rs  mod.rs  request.rs
core/august_plugin_system/src/utils/: bundle.rs  error.rs  mod.rs
core/august_plugin_system/src/variable/: mod.rs  var.rs  var_data.rs  var_data_impl.rs  var_impl.rs  var_type.rs
core/august_plugin_system/tests/: dependency.rs  function.rs  main.rs  version.rs
core/august_plugin_system/tests/utils/: config.rs  mod.rs  native_config.rs  void_manager.rs
core/august_plugin_system/tests/utils/managers/: lua_manager.rs  mod.rs  void_manager.rs
core/managers/august_native_manager/: Cargo.toml
core/managers/august_native_manager/src/: config.rs  error.rs  lib.rs  manager.rs  plugin.rs
core/managers/august_native_manager/tests/: main.rs  utils.rs
plugins/custom_plugin_manager/: Cargo.toml
plugins/dependency/dep_1/: Cargo.toml
plugins/dependency/dep_1/plugin.testpl/: config.toml
plugins/dependency/dep_1/plugin.vpl/: config.toml
plugins/dependency/dep_2/: Cargo.toml
plugins/dependency/dep_2-v1.0.0.vpl/: config.toml
plugins/dependency/dep_2/plugin.testpl/: config.toml
plugins/dependency/dep_2/plugin.vpl/: config.toml
plugins/dependency/dep_3/: Cargo.toml  build.rs
plugins/dependency/dep_3/plugin.testpl/: config.toml
plugins/dependency/dep_3/plugin.vpl/: config.toml
plugins/dependency/dep_4/: Cargo.toml  Makefile.toml
plugins/dependency/dep_4-v1.0.0.vpl/: config.toml
plugins/dependency/dep_4/plugin.testpl/: config.toml
plugins/dependency/dep_4/plugin.vpl/: config.toml
plugins/function_plugin-v1.0.0.fpl/: main.lua
plugins/function_plugin-v2.0.0.fpl/: main.lua
plugins/native_plugin/: Cargo.toml  Makefile.toml  build.rs
plugins/native_plugin/plugin.testpl/: config.toml
plugins/native_plugin/plugin.vpl/: config.toml
plugins/versions/paint-v1.0.0.vpl/: config.toml
plugins/void_plugin/plugin.vpl/: config.toml
(+1 files in other folders)
