[workspace]
members = [
	"core/august_plugin_system",
	"core/managers/august_native_manager",
	"core/managers/august_wasm_manager",
]
exclude = [
	"plugins/native_plugin",
	"plugins/custom_plugin_manager",

	"plugins/dependency/dep_1",
	"plugins/dependency/dep_2",
	"plugins/dependency/dep_3",
	"plugins/dependency/dep_4",
]