[package]
name = "august_plugin_system"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = { path = "codegen", optional = true }
rayon = "1.7.0"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"

[dev-dependencies]
toml = "0.7.3"
codegen = { path = "codegen" }
rlua = "0.19.7"

[features]
derive = ["dep:codegen"]
