[package]
name = "august_plugin_system"
version = "1.0.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = { path = "codegen", optional = true }
rayon = "1.7.0"
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
walkdir = { version = "2.3.3", optional = true }
zip = { version = "0.6.6", optional = true }

[dev-dependencies]
semver = { version = "1.0.18", features = ["serde"] }
toml = "0.7.3"
codegen = { path = "codegen" }
mlua = { version = "0.9.1", features = ["lua54", "vendored", "send"] }

[features]
derive = ["dep:codegen"]
archive = ["dep:walkdir", "dep:zip"]