[package]
name = "codegen"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.57"
quote = "1.0.27"
syn = { version = "2.0.16", features = ["full"] }

[dev-dependencies]
august_plugin_system = { path = ".." }
